# Copyright (C) 2006 International Business Machines and others.
# All Rights Reserved.
# This file is distributed under the Eclipse Public License.

# Author:  Andreas Waechter           IBM    2006-04-13

include $(top_srcdir)/BuildTools/Makemain.inc

########################################################################
#                      unitTest for DyLP                               #
########################################################################

noinst_PROGRAMS = unitTest

unitTest_SOURCES = \
	dytest_problems.c \
	dytest_rays.c \
	dytest_solutions.c \
	dytest_tableau.c \
	unitTest.c

# List libraries required for the unitTest

unitTest_LDADD        = ../src/Dylp/libDylp.la $(DYLPTEST_LIBS)

# Here list all include flags, relative to this "srcdir" directory.

AM_CPPFLAGS = \
        -I$(srcdir)/../src/DylpStdLib \
        -I$(srcdir)/../src/Dylp

########################################################################
#                      unitTest for OsiDyLP                            #
########################################################################

if COIN_HAS_OSITESTS

noinst_PROGRAMS += osiUnitTest

osiUnitTest_SOURCES = osiUnitTest.cpp OsiDylpSolverInterfaceTest.cpp

osiUnitTest_LDADD = ../src/OsiDylp/libOsiDylp.la ../src/Dylp/libDylp.la \
	$(OSIDYLPTEST_LFLAGS)

AM_CPPFLAGS += -I$(srcdir)/../src/OsiDylp $(OSIDYLPTEST_CFLAGS)

osiTestDep = osiUnitTest$(EXEEXT)

osiunittestflags = -mpsDir=$(SAMPLE_DATA)
if COIN_HAS_NETLIB
  osiunittestflags += -netlibDir=$(NETLIB_DATA) -testOsiSolverInterface
endif
endif

########################################################################
#                          test target                                 #
########################################################################

test: unitTest$(EXEEXT) $(osiTestDep)
	./unitTest$(EXEEXT) ; \
	if test -e osiUnitTest$(EXEEXT) ; then \
	  ./osiUnitTest$(EXEEXT) $(osiunittestflags) ; \
	fi

.PHONY: test

########################################################################
#                          Cleaning stuff                              #
########################################################################

# Here we list everything that is not generated by the compiler, e.g.,
# output files of a program.

DISTCLEANFILES = 

if COIN_HAS_OSITESTS
  DISTCLEANFILES += test.* test2.*
endif
