# Copyright (C) 2006 International Business Machines and others.
# All Rights Reserved.
# This file is distributed under the Common Public License.

## $Id$

# Author:  Andreas Waechter           IBM    2006-04-13

AUTOMAKE_OPTIONS = foreign

########################################################################
#                      unitTest for DyLP                               #
########################################################################

noinst_PROGRAMS = unitTest

unitTest_SOURCES = \
	dytest_problems.c \
	dytest_rays.c \
	dytest_solutions.c \
	dytest_tableau.c \
	unitTest.c

# List libraries of COIN projects required for the unitTest

unitTest_LDADD = ../src/Dylp/libDylp.la $(DYLPLIB_LIBS)

# Here list all include flags, relative to this "srcdir" directory.  This
# "cygpath" stuff is necessary to compile with native compilers on Cygwin

AM_CPPFLAGS = \
        -I`$(CYGPATH_W) $(srcdir)/../src/DylpStdLib` \
        -I`$(CYGPATH_W) $(srcdir)/../src/Dylp`

########################################################################
#                      unitTest for OsiDyLP                            #
########################################################################

if COIN_HAS_OSITESTS

noinst_PROGRAMS += osiUnitTest

osiUnitTest_SOURCES = osiUnitTest.cpp OsiDylpSolverInterfaceTest.cpp

osiUnitTest_LDADD = ../src/OsiDylp/libOsiDylp.la ../src/Dylp/libDylp.la \
	$(OSITESTS_LIBS) $(OSIDYLPLIB_LIBS) $(DYLPLIB_LIBS)

AM_CPPFLAGS += -I`$(CYGPATH_W) $(srcdir)/../src/OsiDylp` \
	$(COINUTILS_CFLAGS) $(OSITESTS_CFLAGS)

osiTestDep = osiUnitTest$(EXEEXT)

osiunittestflags = -mpsDir=`$(CYGPATH_W) $(SAMPLE_DATA)`
if COIN_HAS_NETLIB
  osiunittestflags += -netlibDir=`$(CYGPATH_W) $(NETLIB_DATA)` \
		      -testOsiSolverInterface
endif
endif

########################################################################
#                          test target                                 #
########################################################################

# This line is necessary to allow VPATH compilation with MS compilers
# on Cygwin

DEFAULT_INCLUDES = -I. -I`$(CYGPATH_W) $(srcdir)` -I$(top_builddir)/inc

test: unitTest$(EXEEXT) $(osiTestDep)
	./unitTest$(EXEEXT) ; \
	if test -e osiUnitTest$(EXEEXT) ; then \
	  ./osiUnitTest$(EXEEXT) $(osiunittestflags) ; \
	fi

.PHONY: test

########################################################################
#                          Cleaning stuff                              #
########################################################################

# Here we list everything that is not generated by the compiler, e.g.,
# output files of a program

DISTCLEANFILES =
